--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro do IA</h1>
+        <h1>Você e a IA são o futuro!</h1>
         <div class="caixa-perguntas">
             Você já sabe quais são as perguntas que irão nortear sua missão ?
         </div>
@@ -22,5 +22,6 @@
             </p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
